<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/horizontalScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <ImageView
            android:id="@+id/Map"
            android:layout_width="wrap_content"
            android:layout_height="591dp"

            android:scaleType="matrix"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/campus_map" />

        <ImageView
            android:id="@+id/buckStopMapIcon"
            android:layout_width="56dp"
            android:layout_height="45dp"
            android:layout_marginEnd="448dp"
            android:layout_marginRight="448dp"
            android:src="@drawable/ic_buck_stop_map_icon_red"
            app:layout_constraintBottom_toBottomOf="@id/Map"
            app:layout_constraintEnd_toEndOf="@id/Map"
            app:layout_constraintHorizontal_bias="0.76"
            app:layout_constraintStart_toStartOf="@id/Map"
            app:layout_constraintTop_toTopOf="@id/Map"
            app:layout_constraintVertical_bias="0.32" />

        <TextView
            android:id="@+id/buckstoptext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/the_buck_stop"
            android:textColor="@color/colorMapIconDescription"
            app:layout_constraintBottom_toTopOf="@+id/buckStopMapIcon"
            app:layout_constraintEnd_toEndOf="@+id/buckStopMapIcon"
            app:layout_constraintStart_toStartOf="@+id/buckStopMapIcon"
            app:layout_constraintTop_toTopOf="@id/Map"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/underCafMapIcon"
            android:layout_width="56dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_under_caf_icon_yellow"
            app:layout_constraintBottom_toBottomOf="@id/Map"
            app:layout_constraintEnd_toEndOf="@id/Map"
            app:layout_constraintHorizontal_bias="0.64"
            app:layout_constraintStart_toStartOf="@id/Map"
            app:layout_constraintTop_toTopOf="@id/Map"
            app:layout_constraintVertical_bias="0.434" />

        <TextView
            android:id="@+id/underCaftext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/under_caf"
            android:textColor="@color/colorMapIconDescription"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/underCafMapIcon"
            app:layout_constraintEnd_toEndOf="@+id/underCafMapIcon"
            app:layout_constraintStart_toStartOf="@+id/underCafMapIcon"
            app:layout_constraintTop_toTopOf="@id/Map"
            app:layout_constraintVertical_bias="0.966" />

        <ImageView
            android:id="@+id/happyPlaceMapIcon"
            android:layout_width="56dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_happy_place_map_icon_green"
            app:layout_constraintBottom_toBottomOf="@id/Map"
            app:layout_constraintEnd_toEndOf="@id/Map"
            app:layout_constraintHorizontal_bias="0.89"
            app:layout_constraintStart_toStartOf="@id/Map"
            app:layout_constraintTop_toTopOf="@id/Map"
            app:layout_constraintVertical_bias="0.45" />

        <TextView
            android:id="@+id/happyPlaceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="212dp"
            android:text="@string/happy_place"
            android:textColor="@color/colorMapIconDescription"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/happyPlaceMapIcon"
            app:layout_constraintEnd_toEndOf="@+id/happyPlaceMapIcon"
            app:layout_constraintStart_toStartOf="@+id/happyPlaceMapIcon"
            app:layout_constraintTop_toTopOf="@id/Map"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/tutusMapIcon"
            android:layout_width="33dp"
            android:layout_height="28dp"
            android:layout_marginEnd="448dp"
            android:src="@drawable/ic_tutus_map_icon_green"
            app:layout_constraintBottom_toBottomOf="@id/Map"
            app:layout_constraintEnd_toEndOf="@id/Map"
            app:layout_constraintHorizontal_bias="0.425"
            app:layout_constraintStart_toStartOf="@id/Map"
            app:layout_constraintTop_toTopOf="@id/Map"
            app:layout_constraintVertical_bias="0.13999999" />

        <TextView
            android:id="@+id/tutusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="8dp"
            android:text="@string/tutus"
            android:textColor="@color/colorMapIconDescription"
            app:layout_constraintBottom_toTopOf="@+id/tutusMapIcon"
            app:layout_constraintEnd_toEndOf="@+id/tutusMapIcon"
            app:layout_constraintStart_toStartOf="@+id/tutusMapIcon"
            app:layout_constraintTop_toTopOf="@id/Map"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/grillMasterMapIcon"
            android:layout_width="33dp"
            android:layout_height="28dp"
            android:layout_marginEnd="448dp"
            android:src="@drawable/ic_grill_master_icon_green"
            app:layout_constraintBottom_toBottomOf="@id/Map"
            app:layout_constraintEnd_toEndOf="@id/Map"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="@id/Map"
            app:layout_constraintTop_toTopOf="@id/Map"
            app:layout_constraintVertical_bias="0.227" />

        <TextView
            android:id="@+id/grillMasterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/grill_master"
            android:textColor="@color/colorMapIconDescription"
            app:layout_constraintEnd_toEndOf="@+id/grillMasterMapIcon"
            app:layout_constraintHorizontal_bias="0.525"
            app:layout_constraintStart_toStartOf="@+id/grillMasterMapIcon"
            app:layout_constraintTop_toBottomOf="@+id/grillMasterMapIcon" />

    </android.support.constraint.ConstraintLayout>
</HorizontalScrollView>